--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:x="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/layout_item_task">
 
     <CheckBox
         android:id="@+id/checkbox_task_complete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:enabled="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textview_task_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Here is the news that should wrap around."
+            android:layout_marginTop="2dp"
             android:textSize="16dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="Title" />
 
         <TextView
             android:id="@+id/textview_task_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Here is the sample text description that should wrap around." />
+            tools:text="Description" />
+
+        <TextView
+            android:id="@+id/textview_other_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="." />
 
     </LinearLayout>
 </LinearLayout>
